--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1344,6 +1344,7 @@ input::-moz-focus-outer {
   border-width: 4px;
   border-top: 0;
   border-bottom: 0;
+  background-color: transparent !important;
 }
 
 .nes-style .segmented-control .radio-selection {
