--- a/scss/styles/_nes.scss
+++ b/scss/styles/_nes.scss
@@ -1,9 +1,15 @@
-@mixin nes_border($repeat_mode) {
+$blackContainerBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="8" height="8" xmlns="http://www.w3.org/2000/svg"><path d="M3 1 h1 v1 h-1 z M4 1 h1 v1 h-1 z M2 2 h1 v1 h-1 z M5 2 h1 v1 h-1 z M1 3 h1 v1 h-1 z M6 3 h1 v1 h-1 z M1 4 h1 v1 h-1 z M6 4 h1 v1 h-1 z M2 5 h1 v1 h-1 z M5 5 h1 v1 h-1 z M3 6 h1 v1 h-1 z M4 6 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+$whiteContainerBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="8" height="8" xmlns="http://www.w3.org/2000/svg"><path d="M3 1 h1 v1 h-1 z M4 1 h1 v1 h-1 z M2 2 h1 v1 h-1 z M5 2 h1 v1 h-1 z M1 3 h1 v1 h-1 z M6 3 h1 v1 h-1 z M1 4 h1 v1 h-1 z M6 4 h1 v1 h-1 z M2 5 h1 v1 h-1 z M5 5 h1 v1 h-1 z M3 6 h1 v1 h-1 z M4 6 h1 v1 h-1 z" fill="rgb(255,255,255)" /></svg>');
+$blackInputBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+$whiteInputBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(255,255,255)" /></svg>');
+$blackButtonBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+$whiteButtonBorderImg: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(255,255,255)" /></svg>');
+
+@mixin nes_border($repeat_mode, $border_img) {
   border-image-slice: 2;
   border-image-width: 2;
-  //   border-image-repeat: stretch;
   border-image-repeat: $repeat_mode;
-  border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+  border-image-source: $border_img;
   border-image-outset: 2;
   background-clip: padding-box;
   border-style: solid;
@@ -99,7 +105,7 @@
   }
 
   .skillbar {
-    @include nes_border(space);
+    @include nes_border(space, $blackInputBorderImg);
     margin-top: 5px;
     margin-bottom: 5px;
     border-image-width: 3;
@@ -108,7 +114,7 @@
   }
 
   .badge.badge-pill {
-    @include nes_border(stretch);
+    @include nes_border(stretch, $blackInputBorderImg);
     border-image-width: 3;
     border-width: 3px;
     border-radius: 0;
@@ -179,7 +185,7 @@
 
   .form-group input,
   textarea {
-    @include nes_border(space);
+    @include nes_border(space, $blackInputBorderImg);
     width: calc(100% - 8px);
     padding: 0.5rem 1rem;
     margin: 4px;
@@ -208,6 +214,9 @@
     border-image-repeat: space;
   }
 
+  .dropdown .dropdown-arrow::before {
+    //     content: none;
+  }
   .dropdown .dropdown-arrow::after {
     width: 3px;
     height: 3px;
@@ -227,13 +236,14 @@
 
   /*  Segmented Control*/
   .segmented-control {
-    @include nes_border(space);
+    @include nes_border(space, $blackInputBorderImg);
     border-top: 0;
     border-bottom: 0;
+    background-color: transparent !important;
   }
 
   .segmented-control .radio-selection {
-    @include nes_border(stretch);
+    @include nes_border(stretch, $blackInputBorderImg);
     border-left: 0;
     border-right: 0;
 
@@ -297,7 +307,7 @@
   }
 
   .display-content > .container {
-    background-color: $schemeColor; //TODO: Dynamic
+    background-color: $schemeColor;
   }
 
   .personal-image img {
@@ -358,7 +368,7 @@
   }
 
   .blog-intro > img {
-    @include nes_border(space);
+    @include nes_border(space, $blackInputBorderImg);
   }
 
   .code-block pre {
