[WIN98] Basic: Button component (static)

--- a/backgrounds/_windows98-bg.scss
+++ b/backgrounds/_windows98-bg.scss
@@ -1,8 +1,6 @@
 .windows98-bg::before {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../backgrounds/windows98.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background-attachment: fixed;
   background-size: cover;
 }
