--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -615,6 +615,10 @@ p.scalable {
   }
 }
 
+.display-content > .title-bar {
+  display: none;
+}
+
 .button-border {
   display: inline-block;
   padding: 1px;
@@ -1613,6 +1617,82 @@ input::-moz-focus-outer {
 
 .win98-style .display-content > .container {
   background-color: #d4d4d4;
+  border-radius: 0;
+}
+
+.win98-style .title-bar {
+  width: 100%;
+  position: relative;
+  max-width: 1100px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: -webkit-gradient(linear, left top, right top, from(navy), to(#1084d0));
+  background: linear-gradient(90deg, navy, #1084d0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 3px 2px 3px 3px;
+  height: 30px;
+}
+
+.win98-style .title-bar .title-bar-text {
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 0;
+  margin-right: 24px;
+}
+
+.win98-style .title-bar .title-bar-controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.win98-style .title-bar .title-bar-controls button {
+  border: none;
+  border-radius: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  min-height: 14px;
+  min-width: 16px;
+  padding: 0;
+  background: silver;
+  -webkit-box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey, inset 2px 2px #dfdfdf;
+          box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey, inset 2px 2px #dfdfdf;
+  zoom: 1.4;
+}
+
+.win98-style .title-bar .title-bar-controls button[aria-label="Minimize"] {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='6' height='2' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23000' d='M0 0h6v2H0z'/%3E%3C/svg%3E");
+  background-position: bottom 3px left 4px;
+  background-repeat: no-repeat;
+}
+
+.win98-style .title-bar .title-bar-controls button[aria-label="Maximize"] {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='9' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 0H0v9h9V0zM8 2H1v6h7V2z' fill='%23000'/%3E%3C/svg%3E");
+  background-position: top 2px left 3px;
+  background-repeat: no-repeat;
+}
+
+.win98-style .title-bar .title-bar-controls button[aria-label="Close"] {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='8' height='7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0 0h2v1h1v1h2V1h1V0h2v1H7v1H6v1H5v1h1v1h1v1h1v1H6V6H5V5H3v1H2v1H0V6h1V5h1V4h1V3H2V2H1V1H0V0z' fill='%23000'/%3E%3C/svg%3E");
+  background-position: top 3px left 4px;
+  background-repeat: no-repeat;
+}
+
+.win98-style .title-bar .title-bar-controls button[aria-label="Restore"] {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='8' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23000' d='M2 0h6v2H2zM7 2h1v4H7zM2 2h1v1H2zM6 5h1v1H6zM0 3h6v2H0zM5 5h1v4H5zM0 5h1v4H0zM1 8h4v1H1z'/%3E%3C/svg%3E");
+  background-position: top 2px left 3px;
+  background-repeat: no-repeat;
 }
 
 .win98-style .button {
