[WIN98] Place Title bar inside Container

--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1618,6 +1618,9 @@ input::-moz-focus-outer {
 .win98-style .display-content > .container {
   background-color: #d4d4d4;
   border-radius: 0;
+  background: silver;
+  -webkit-box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey, inset 2px 2px #fff;
+          box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey, inset 2px 2px #fff;
 }
 
 .win98-style .title-bar {
@@ -1641,6 +1644,10 @@ input::-moz-focus-outer {
           justify-content: space-between;
   padding: 3px 2px 3px 3px;
   height: 30px;
+  max-width: 1094px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
 }
 
 .win98-style .title-bar .title-bar-text {
