--- a/scss/styles/_win98.scss
+++ b/scss/styles/_win98.scss
@@ -9,6 +9,7 @@
     //     padding: 3px;
   }
 
+  // TODO: media responsive
   .title-bar {
     // same as container
     width: 100%;
@@ -21,16 +22,22 @@
 
     align-items: center;
     background: linear-gradient(90deg, navy, #1084d0);
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
     padding: 3px 2px 3px 3px;
     height: 30px;
 
     // in case include title bar inside the container
-    max-width: 1094px;
-    position: absolute;
-    top: 2px;
-    left: 2px;
+    // Option 1; absolute pos
+    // max-width: 1094px;
+    //     position: absolute;
+    //     top: 2px;
+    //     left: 2px;
+    // Option 2; relatieve pos
+    width: 1094px;
+    position: relative;
+    top: -38px;
+    left: -38px;
 
     .title-bar-text {
       color: #fff;
@@ -55,6 +62,16 @@
       box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
         inset -2px -2px grey, inset 2px 2px #dfdfdf;
       zoom: 1.4;
+    }
+
+    button:not(:disabled):active {
+      box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a,
+        inset -2px -2px #dfdfdf, inset 2px 2px grey;
+      padding: 2px 11px 0 13px;
+    }
+
+    .title-bar-controls button:active {
+      padding: 0;
     }
 
     .title-bar-controls button[aria-label="Minimize"] {
