--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -623,6 +623,10 @@ p.scalable {
   display: none;
 }
 
+.setting-panel > .title-bar {
+  display: none;
+}
+
 .button-border {
   display: inline-block;
   padding: 1px;
@@ -1619,9 +1623,10 @@ input::-moz-focus-outer {
   width: 8px !important;
 }
 
-.win98-style .display-content > .container {
+.win98-style .display-content > .container,
+.win98-style .setting-panel {
   background-color: #d4d4d4;
-  border-radius: 0;
+  border-radius: 0 !important;
   background: silver;
   -webkit-box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey, inset 2px 2px #fff;
           box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey, inset 2px 2px #fff;
@@ -1714,6 +1719,16 @@ input::-moz-focus-outer {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='8' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23000' d='M2 0h6v2H2zM7 2h1v4H7zM2 2h1v1H2zM6 5h1v1H6zM0 3h6v2H0zM5 5h1v4H5zM0 5h1v4H0zM1 8h4v1H1z'/%3E%3C/svg%3E");
   background-position: top 2px left 3px;
   background-repeat: no-repeat;
+}
+
+.win98-style .setting-panel .title-bar {
+  width: 173px;
+  top: 2px;
+  left: -1px;
+}
+
+.win98-style .setting-section .scrollable {
+  height: 445px;
 }
 
 .win98-style .button {
