--- a/scss/styles/_win98.scss
+++ b/scss/styles/_win98.scss
@@ -182,4 +182,39 @@
     width: 7px;
     zoom: 1.2;
   }
+
+  /*Radio */
+  input[type="radio"] + label {
+    margin-left: 18px;
+    position: relative;
+  }
+
+  .dui-radio .indicator::after {
+    display: none;
+  }
+
+  input[type="radio"] + label:before {
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 0H4v1H2v1H1v2H0v4h1v2h1V8H1V4h1V2h2V1h4v1h2V1H8V0z' fill='gray'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 1H4v1H2v2H1v4h1v1h1V8H2V4h1V3h1V2h4v1h2V2H8V1z' fill='%23000'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 3h1v1H9V3zm1 5V4h1v4h-1zm-2 2V9h1V8h1v2H8zm-4 0v1h4v-1H4zm0 0V9H2v1h2z' fill='%23DFDFDF'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M11 2h-1v2h1v4h-1v2H8v1H4v-1H2v1h2v1h4v-1h2v-1h1V8h1V4h-1V2z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4 2h4v1h1v1h1v4H9v1H8v1H4V9H3V8H2V4h1V3h1V2z' fill='%23fff'/%3E%3C/svg%3E");
+    content: "";
+    display: inline-block;
+    height: 12px;
+    left: 16px;
+    margin-right: 6px;
+    position: absolute;
+    top: 8px;
+    width: 12px;
+    //     zoom: 1.2;
+  }
+
+  input[type="radio"]:checked + label:after {
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg width='4' height='4' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3 0H1v1H0v2h1v1h2V3h1V1H3V0z' fill='%23000'/%3E%3C/svg%3E");
+    content: "";
+    display: block;
+    height: 4px;
+    left: 20px;
+    position: absolute;
+    top: 12px;
+    width: 4px;
+    //     zoom: 1.2;
+  }
 }
