--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,10 +1,10 @@
-.display-content > .container > .title-bar {
-  display: none;
-}
-.display-content > .title-bar {
-  display: none;
-}
+// .display-content > .container > .title-bar {
+//   display: none;
+// }
+// .display-content > .title-bar {
+//   display: none;
+// }
 
-.setting-panel > .title-bar {
-  display: none;
-}
+// .setting-panel > .title-bar {
+//   display: none;
+// }
